--- a/_posts/2020-08-31-505-wechat.md
+++ b/_posts/2020-08-31-505-wechat.md
@@ -9,45 +9,46 @@ tags: [linux]
 
 ## ubuntu 16.04及以上可用。
 
-- 32位支持
-```
+# 32位支持
+```shell
 # sudo dpkg –add-architecture i386
 ```
 
-- 添加源
+# 添加源
 
-```
+```shell
 # sudo vim /etc/apt/sources.list
 # deb https://mirrors.aliyun.com/deepin/ panda main contrib non-free
 # deb-src https://mirrors.aliyun.com/deepin/ panda main contrib non-free
 # deb https://mirrors.aliyun.com/deepin/ panda main contrib non-free 
 ```
 
-- 保存后为上面的源加入许可证
+# 保存后为上面的源加入许可证
 
-```
+```shell
 # wget https://mirrors.aliyun.com/deepin/project/deepin-keyring.gpg
 # gpg –import deepin-keyring.gpg
 # sudo gpg –export –armor 209088E7 | sudo apt-key add – sudo apt-key adv –keyserver keyserver.ubuntu.com –recv-keys425956BB3E31DF51 
 ```
 
-- 安装微信（2.6.8版本）
+# 安装微信（2.6.8版本）
 
-```
+```shell
 # sudo apt update
 # sudo apt install deepin.com.wechat
 ```
 
-- 更新微信方法
+# 更新微信方法
 
-```
+```shell
 # mkdir /tmp/wechat
 # cd /tmp/wechat
 # wget https://dldir1.qq.com/weixin/Windows/WeChatSetup.exe
 # env WINEPREFIX=~/.deepinwine/Deepin-WeChat deepin-wine WeChatSetup.exe
 ```
 
-- PS：sudo apt-cache search XXX 使用这个命令可搜索软件安装，QQ，TIM，钉钉，迅雷等可自取。
+
+PS：sudo apt-cache search XXX 使用这个命令可搜索软件安装，QQ，TIM，钉钉，迅雷等可自取。
 
 
 
