--- a/_posts/2021-01-13-507-ai.md
+++ b/_posts/2021-01-13-507-ai.md
@@ -5,17 +5,31 @@ pid: 507
 tags: [产品经理, AI]
 ---
 
-描述AI的书籍特别的多，AI三个重要的因素是：算法、算力、数据
+人工智能三要素：算法、算力、数据
+
+ABCD“四大技术”，包括A(Artificial Intelligence)人工智能、B(Blockchain) 区块链、C(Cloud Computing)云计算和D(Big Data)大数据;
+
+在互联网巨头(GAFA，BATJ1)所营造的增值服务和美好体验的氛围下，客户对于金融 业的诉求已不再是简单的“更多产品”或“更高效率”。
+
+GAFA意为美国四大科技公司Google, Apple, Facebook和Amazon;BATJ意为中国四大科技公司百度、 阿里巴巴、腾讯和京东。
 
 
 
 ![](/uploads/2021/01/13-01.jpg)
 
+
+
 ![](/uploads/2021/01/13-02.jpg)
+
+
 
 ![](/uploads/2021/01/13-03.jpg)
 
+
+
 ![](/uploads/2021/01/13-04.jpg)
+
+
 
 ![](/uploads/2021/01/13-05.jpg)
 
