--- a/_posts/2021-01-13-507-ai.md
+++ b/_posts/2021-01-13-507-ai.md
@@ -33,3 +33,11 @@ GAFA意为美国四大科技公司Google, Apple, Facebook和Amazon;BATJ意为中
 
 ![](/uploads/2021/01/13-05.jpg)
 
+
+
+# 参考
+
+
+
++ [认识智能-AI时代下的商业逻辑](https://alanhou.org/yangyang/)
++ [与AI共进，智胜未来：智能金融报告-埃森哲&百度-2020.12-86页]()
