--- a/_posts/2021-01-22-509-leanstartup.md
+++ b/_posts/2021-01-22-509-leanstartup.md
@@ -146,7 +146,7 @@ tags: [产品经理, 创业]
 
 正确的姿势是我们要先有**需求探索**。什么叫需求探索？就是我有一个想法，或者找到一个痛点，或者一个好的解决方案，我用一些非常轻度的东西先去实验一下；需求探索之后，就是用户验证，就涉及到做MVP了，做出一个小实验品，让用户使用，并给出一些真实的反馈；用户验证成功了再去做推广，推广之后会有真的用户需求，我们再继续去验证和探索，这个是一个正确的步骤。
 
-<需求探索>
+需求探索
 
 ![](/uploads/2021/01/20180714-071158_118.jpg)
 
@@ -196,7 +196,7 @@ tags: [产品经理, 创业]
 
 第六，总结。用户访谈结束后需要做最后总结。调查用户的实际痛点跟你想象的痛点是否一致，以及用户希望的方案跟你想象的方案是否一致，核心就是验证这两个“是否”。如果一样，那就从需求探索走到用户验证，如果不一样，那就继续迭代上述过程。
 
-<用户验证>
+用户验证
 
 ![](/uploads/2021/01/20180714-071158_126.jpg)
 
