--- a/_posts/2019-07-10-442-value.md
+++ b/_posts/2019-07-10-442-value.md
@@ -5,18 +5,18 @@ pid: 442
 tags: [岗前培训]
 ---
 
-三年多的实战，我们的价值观，如下：
+四年多的实战，我们的价值观，如下：
 
-+ 独立思考
++ 独立思考（辩证思维）
 + 主动且有激情
-+ 定位CEO
++ 定位CEO（主人翁意识）
 + 有效产出（TOC）
 + 同理心和大局观
 + 良好的人际沟通和团队协作
 + 定期复盘、接受失败、持续尝试
 + 全栈发展、不自我限定工作范围
 + 终身寻找最佳实践
-+ 薪资观
++ 拥有正确的薪资观
 + 按时休息、合理膳食
 + 打卡（早8.30 ~ 晚5.30）
 + 6个月的试用期
