--- a/_posts/2021-01-22-509-leanstartup.md
+++ b/_posts/2021-01-22-509-leanstartup.md
@@ -6,11 +6,21 @@ tags: [产品经理, 创业]
 
 ---
 
+程浩：远望资本创始合伙人、迅雷创始人
+
+如何用“精益”方法让企业少走弯路
+
+目录
++ 01 什么是精益
++ 02 生活中的精益
++ 03 精益创业
++ 04 企业如何转型
++ 05 如何快速获取用户
++ 06 精益创业的误区和局限性
++ 07 企业如何管理内部创新
+
+
 今天，跟大家简单做一个关于精益创业方面的分享。
-
-![](/uploads/2021/01/20180714-071158_88.jpg)
-
-![](/uploads/2021/01/20180714-071158_89.jpg)
 
 # 01  什么是精益
 
