--- a/_posts/2021-01-22-509-leanstartup.md
+++ b/_posts/2021-01-22-509-leanstartup.md
@@ -10,7 +10,49 @@ tags: [产品经理, 创业]
 
 如何用“精益”方法让企业少走弯路
 
+本节课上，程浩老师详细介绍了“精益创业”方法在创业和工作中如何具体应用。如何用“精益”的方法让企业少走弯路。
+
+精益创业三步曲：
+1、需求探索；2、用户验证；3推广
+
+一、需求探索阶段
+
+1、先找到痛点：生活中的痛点无所不在，想象中的痛点和实际痛点往往有很大差别。
+2、常识判断：精益创业不可能把所有不确定的东西都用MVP去验证，需要用常识判断大部分的需求是否值得验证。
+3、头脑风暴：CEO切记要少说，多听，不要急于发表自己的意见。
+4、找到核心用户：谁最痛，谁就是核心用户。
+5、用户访谈：用户访谈有很多技巧，具体说主要有：要面对面访谈；保持开放讨论，不要让用户做选择题；要一对一访谈，而不能是一群人访谈；不要做问卷调查；一定要走出办公室，而不是把别人请到你的办公室里。
+6、做总结：用户访谈结束后需要做总结。调查用户的实际痛点跟你想象的痛点是否一致。
+
+二、用户验证阶段
+
+1、找到最需要验证的问题：这是需求探索阶段的结果，通过需求探索我们可以获得一个最需要验证的问题或者需求。
+2、针对这个问题设计MVP：设计MVP的核心是快速低成本试错。
+3、收集数据、亲自体验、再次访谈。数据收集的方法主要有漏斗式、切片分析、A/B测试、灰度测试等。
+亲自体验法则一：数据是辅助，绝对不能替代自己的亲自体验；
+法则二：创业公司的CEO就是首席产品经理。看过数据，也亲自体验过之后，还有一个步骤，我们仍然要做一些用户访谈。
+4、总结：验证假设：做完以上环节之后，需要输出一个结论：到底我们的产品是否真的满足了用户的需求？没有满足的话，原因在哪？满足了是否可以进入下一个环节。
+
+三、推广阶段
+
+第一种方法——黏着式：2B企业使用比较多。对于2B业务来讲，核心指标是损耗率。去年有100个客户用我的产品，今年有几个不用了，如何保持业务的持续增长呢？就是要保证新客户的增长超过老客户的损耗。
+第二种方法——付费式：付费式有一个关键词叫LTV（Life Time Value），就是用户这一辈子会在这个产品上花多少钱。付费式增长最主要的应用领域是在游戏领域。
+第三种方法——病毒式：所有社交网站都是通过病毒式进行传播的。病毒式推广涉及到一个参数叫病毒指数，就是平均每一位用户会带来多少位用户，如果病毒指数数大于1，就会实现快速增长。
+
+总结回顾，精益创业有三大步骤：
+1、需求探索
+从找到痛点，到常识判断，头脑风暴，找到核心用户，到总结；
+2、用户验证
+找出最需要验证的问题，然后设计MVP，然后收集数据，亲自体验，再次访谈；
+3、推广
+推广的方法主要包括黏着式、付费式和病毒式。这是今天关于精益创业最核心的内容。
+
+------
+
+今天，跟大家简单做一个关于精益创业方面的分享。
+
 目录
+
 + 01 什么是精益
 + 02 生活中的精益
 + 03 精益创业
@@ -18,8 +60,6 @@ tags: [产品经理, 创业]
 + 05 如何快速获取用户
 + 06 精益创业的误区和局限性
 + 07 企业如何管理内部创新
-
-今天，跟大家简单做一个关于精益创业方面的分享。
 
 # 01  什么是精益
 
