--- a/_posts/2021-05-13-550-dvc.md
+++ b/_posts/2021-05-13-550-dvc.md
@@ -292,7 +292,7 @@ tags: [数字化转型]
 
 做深度价值创造的基础，首先来自我们的属性——我们是长期资本；其次，我们拥有新技术的敏感性，我们不是卖技术，而是技术赋能；在新模式出现时，我们会向最前沿的创业公司去学习，并搭建桥梁让它进来。此外，我们还有生态资源、人才支持、精益运营、医疗服务等，共“七大武器”。
 
-# 第四部分
+# 第三部分
 
 **企业数字化转型的路径探索**
 
