--- a/_posts/2021-05-17-551-yinzheng.md
+++ b/_posts/2021-05-17-551-yinzheng.md
@@ -152,7 +152,7 @@ IoT的三个层面：
 
 汉威找到施耐德寻求帮助：汉威短时间、快速的增长，超越了其原有管理方式的极限。内部效率降低，对外，也难以按时完成客户交付。汉威认为，也许通过购买自动化设备，可以提高整体效率。
 
-施耐德的给出的解决方式是：先医后药，先软后硬，小步快跑，效益第一。
+**施耐德的给出的解决方式是：先医后药，先软后硬，小步快跑，效益第一。**
 
 不能盲目地上设备，我们先来诊断问题出在哪里。经过施耐德的分析判断，其实汉威的问题出在管理上，企业处在“管理黑箱”中，所以首先要解决的是管理问题。
 
