--- a/_posts/2022-12-05-609-java.md
+++ b/_posts/2022-12-05-609-java.md
@@ -29,7 +29,7 @@ http://www.xuexi.com/students
 
 http://www.xuexi.com/students/112423456647458
 
-通常情况下，需要在项目中加入web 框架级别的组建，比如Struts、Spring MVC 等等。
+通常情况下，需要在项目中加入web 框架级别的组件，比如Struts、Spring MVC 等等。
 
 你需要知道，Web项目是如何启动的？如何加载配置的？如何将http的web请求映射到java程序中的执行类的。
 
