--- a/_posts/2023-04-27-613-uipath.md
+++ b/_posts/2023-04-27-613-uipath.md
@@ -42,4 +42,9 @@ https://blog.csdn.net/u011296732/article/details/127533583
 https://www.jianshu.com/p/c952866de9cf
 
 
+设置下chrome
+
+https://blog.csdn.net/olixu/article/details/126124178
+
+
 
