--- a/_posts/2023-09-22-629-eoa.md
+++ b/_posts/2023-09-22-629-eoa.md
@@ -9,7 +9,7 @@ emotional office abuse 职场冷暴力
 
 职场冷暴力不仅会对受害者造成伤害，还会对整个团队产生负面影响，如降低工作效率、破坏团队合作等。因此，应该采取积极的措施来预防和处理职场冷暴力问题。
 
-职场冷暴力不违法，但是不道德，从轻到重，总有一款可以让你奔溃的。 从言语和沟通上的无视、孤立、排挤、加班、扣绩效等等，都是非常可怕的，如果你遇到这样的情况，请在第一时间选择离开，尽可能的去保护好自己的权益。
+职场冷暴力不违法，但是不道德，从轻到重，总有一款可以让你崩溃的。 从言语和沟通上的无视、孤立、排挤、加班、扣绩效等等，都是非常可怕的，如果你遇到这样的情况，请在第一时间选择离开，尽可能的去保护好自己的权益。
 
 雇主（企业主）：短期发展与可持续发展的权衡。
 
