--- a/_posts/2023-12-18-633-db.md
+++ b/_posts/2023-12-18-633-db.md
@@ -1,10 +1,12 @@
 ---
 layout: post
-title: oracle-ORA-01653: unable to extend table SYS.AUD$ by 8192 in tablespace SYSTEM
+title: oracle-ORA-01653
 pid: 633
 tags: [db]
 ---
 
+
+```sql
 SELECT a.tablespace_name "表空间名",
 a.bytes / 1024 / 1024 "表空间大小(M)",
 (a.bytes - b.bytes) / 1024 / 1024 "已使用空间(M)",
@@ -19,17 +21,13 @@ GROUP BY tablespace_name) b
 WHERE a.tablespace_name = b.tablespace_name
 ORDER BY ((a.bytes - b.bytes) / a.bytes) DESC
 
-
-
 alter tablespace  SYSAUX  add datafile  'SYSAUX02.dbf'  size 5G ;
 alter tablespace  SYSTEM  add datafile  'SYSTEM02.dbf'  size 10G ;
 
 
-
-
 select distinct dfs.tablespace_name, df.name  from dba_free_space dfs left join v$datafile df on dfs.file_id = df.FILE# order by dfs.tablespace_name;
 
-
+```
 
 
 
